--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".MainActivity" android:label="@string/app_name" android:screenOrientation="portrait"/>
         <activity android:name=".OtroMedicamentoActivity" android:label="@string/otroMedicamentoActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".InfoMedicamentoActivity" android:label="@string/InfoMedicamentoActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
