--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,16 @@ android {
     }
 }
 
+apply plugin: 'kotlin-kapt'
+
 dependencies {
+
+    def room_version = "2.3.0"
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:$room_version")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
