--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="pe.edu.ulima.pm.medifacil2">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
+        tools:ignore="QueryAllPackagesPermission" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-feature android:name="android.hardware.Camera"/>
 
     <application
         android:allowBackup="true"
@@ -20,6 +28,17 @@
         <activity android:name=".MainActivity" android:label="@string/app_name" android:screenOrientation="portrait"/>
         <activity android:name=".OtroMedicamentoActivity" android:label="@string/otroMedicamentoActivity" android:screenOrientation="portrait"/>
         <activity android:name=".InfoMedicamentoActivity" android:label="@string/InfoMedicamentoActivity" android:screenOrientation="portrait"/>
+
+        <provider
+            android:authorities="pe.edu.ulima.pm.medifacil2.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+
     </application>
 
 </manifest>
