--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         tools:ignore="QueryAllPackagesPermission" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.SET_ALARM"/>
 
     <uses-feature android:name="android.hardware.Camera"/>
 
@@ -28,6 +29,7 @@
         <activity android:name=".MainActivity" android:label="@string/app_name" android:screenOrientation="portrait"/>
         <activity android:name=".OtroMedicamentoActivity" android:label="@string/otroMedicamentoActivity" android:screenOrientation="portrait"/>
         <activity android:name=".InfoMedicamentoActivity" android:label="@string/InfoMedicamentoActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".DestinationActivity" android:label="Destino" android:screenOrientation="portrait"/>
 
         <provider
             android:authorities="pe.edu.ulima.pm.medifacil2.fileprovider"
@@ -38,6 +40,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"/>
         </provider>
+        <receiver android:name=".receiver.AlarmReceiver" android:enabled="true" android:exported="false"/>
 
     </application>
 
